fixed swagger host for render
